syntax = "proto3";

service NewsService {
    rpc GetAllNews (Empty) returns (NewsList) {}
    rpc GetNews (NewsRequestId) returns (News) {}
    rpc AddNews (News) returns (News) {}
    rpc EditNews (News) returns (News) {}
    rpc DeleteNews (NewsRequestId) returns (Empty) {}
}

message Empty {}
message News {
    string id = 1;
    string title = 2;
    string body = 3;
    string postImage = 4;
}
message NewsList {
    repeated News news = 1;
}
message NewsRequestId {
    string id = 1;
}